add Discord links

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <section class="hero hero--homepage-top">
       <div class="navbar-menu ms-navbar-menu">
         <div class="navbar-end">
+          <a href="https://discord.gg/K9nDY6x" class="navbar-item"
+            target="_blank">
+            <i class="fab fa-discord"></i>
+          </a>
           <a href="https://twitter.com/microsponsors" class="navbar-item"
             target="_blank">
             <i class="fab fa-twitter"></i>
@@ -53,14 +57,22 @@
         <div class="container ms-container--buttons">
           <a href="exchange.html?view=registry"
             class="button is-primary is-green is-medium is-emphasized">
-            Register
+            Register Early
             &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
+          <a href="exchange.html"
+            class="button is-primary is-medium is-emphasized"
+            style="background: #E59400;">
+            Join our Discord
+            &nbsp;<i class="fas fa-chevron-right"></i>
+          </a>
+          <!--
           <a href="exchange.html"
             class="button is-primary is-medium is-emphasized">
             Browse the exchange
             &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
+          -->
         </div>
 
         <div class="container ms-container--howthisworks">
@@ -156,6 +168,12 @@
         <div class="columns">
           <div class="column is-1"></div>
           <div class="column is-5 column--footer-links">
+            <div class="footer__link-container">
+              <a href="https://discord.gg/K9nDY6x" class="footer__link" target="_blank">
+                <i class="fab fa-discord"></i>
+                Join our Discord &rarr;
+              </a>
+            </div>
             <div class="footer__link-container">
               <a href="javascript: void(0);" class="footer__link">
                 <i class="far fa-envelope"></i>
