--- a/privacy.html
+++ b/privacy.html
@@ -45,6 +45,12 @@
           <div class="column is-1"></div>
           <div class="column is-5 column--footer-links">
             <div class="footer__link-container">
+              <a href="https://discord.gg/K9nDY6x" class="footer__link" target="_blank">
+                <i class="fab fa-discord"></i>
+                Join our Discord &rarr;
+              </a>
+            </div>
+            <div class="footer__link-container">
               <a href="javascript: void(0);" class="footer__link">
                 <i class="far fa-envelope"></i>
                 hello<span class="is-hidden">\</span>@<span span class="is-hidden">/</span>microsponsors.io
