discord link in .hero

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             Register Early
             &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
-          <a href="exchange.html"
+          <a href="https://discord.gg/K9nDY6x"
             class="button is-primary is-medium is-emphasized"
             style="background: #E59400;">
             Join our Discord
