update homepage: improve how this works for creators and sponsors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="static/css/main.9817803020.css">
+    <link rel="stylesheet" href="static/css/main.caf1d19fba.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -55,15 +55,14 @@
           </h2>
         </div> <!-- /.container -->
         <div class="container ms-container--buttons">
+          <a href="exchange.html"
+            class="button is-primary is-medium is-emphasized is-orange">
+            Join our Discord
+            &nbsp;<i class="fas fa-chevron-right"></i>
+          </a>
           <a href="exchange.html?view=registry"
             class="button is-primary is-green is-medium is-emphasized">
             Register Early
-            &nbsp;<i class="fas fa-chevron-right"></i>
-          </a>
-          <a href="https://discord.gg/K9nDY6x"
-            class="button is-primary is-medium is-emphasized"
-            style="background: #E59400;">
-            Join our Discord
             &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
           <!--
@@ -72,9 +71,8 @@
             Browse the exchange
             &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
-          -->
+        -->
         </div>
-
         <div class="container ms-container--howthisworks">
           <p>How it works</p>
           <a href="javascript: void(0);"
@@ -89,14 +87,30 @@
     <section class="section homepage-details" id="ms-homepage-details">
       <div class="container">
 
+        <div class="columns homepage-details__howthisworks">
+          <div class="column is-6 homepage-details__howthisworks__creators" >
+            <h3 class="title is-4 is-size-6-mobile">For Creators:</h3>
+            <ul>
+            <li class="is-6 is-size-7-mobile">Creators mint tokens that represent time slots as ERC-721 "Non-Fungible" tokens.</li>
+            <li class="is-6 is-size-7-mobile">A time slot can be for: a podcast shout-out, a mention in a video or livestream or a game, freelancing, events, services, charity... Be creative!</li>
+            <li class="is-6 is-size-7-mobile">Each time slot automatically goes to auction on Microsponsors, the Creator picks the winning bid.</li>
+            </ul>
+          </div>
+          <div class="column is-6 homepage-details__howthisworks__sponsors">
+            <h3 class="title is-4 is-size-6-mobile">For Sponsors:</h3>
+            <ul>
+            <li class="is-6 is-size-7-mobile">Sponsors browse the market and bid on the Creators' time slots they wish to purchase.</li>
+            <li class="is-6 is-size-7-mobile">Each auction has a Comments section that the Sponsor can use to ask questions and leave feedback at the end.</li>
+            <li class="is-6 is-size-7-mobile">Auctions end at least 24 hours before the time slot begins.</li>
+          </ul>
+          </div>
+        </div>
+
         <div class="homepage-details__detail">
           <div class="detail-icon detail-icon__p2p"></div>
-          <h3 class="title is-4 is-size-6-mobile">Peer-to-Peer Auctions</h3>
+          <h3 class="title is-4 is-size-6-mobile">Peer-to-Peer</h3>
           <ul>
-            <li class="is-5 is-size-7-mobile">Creators mint tokens that represent time slots. Each time slot automatically goes to auction as an ERC-721 "Non Fungible" token on the Ethereum blockchain.</li>
-            <li class="is-5 is-size-7-mobile">A time slot can be for: a podcast shout-out, a mention in a video or livestream or a game, freelancing, services, charity... Be creative!</li>
-            <li class="is-5 is-size-7-mobile">Sponsors browse the market and bid on the Creators' time slots. The auction ends at least 24 hours before the time slot begins, but the Creator can end it sooner.</li>
-            <li class="is-5 is-size-7-mobile">To end the auction, the Creator chooses a winning bid and assets are exchanged directly, wallet-to-wallet using the <a href="https://0x.org" target="_blank">0x Protocol.</a></li>
+            <li class="is-5 is-size-7-mobile">When Creators choose a winning bid, tokens are traded directly wallet-to-wallet using the <a href="https://0x.org" target="_blank">0x Protocol</a> on the public Ethereum blockchain.</li>
             <li class="is-5 is-size-7-mobile">In other words: No middlemen! Microsponsors is basically a bulletin board with built-in auctions.</li>
           </ul>
         </div>
@@ -290,6 +304,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: prelaunch-mainnet
-git sha: 5ef3226122d61634e9b58a6fd338c60c14427cad
+git branch: master
+git sha: 92d201d50bf1187fa588ecb4ac237e58b1bff94d
  -->
