--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </h2>
         </div> <!-- /.container -->
         <div class="container ms-container--buttons">
-          <a href="exchange.html"
+          <a href="https://discord.gg/K9nDY6x"
             class="button is-primary is-medium is-emphasized is-orange">
             Join our Discord
             &nbsp;<i class="fas fa-chevron-right"></i>
