update discord links to non-kick

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="hero hero--homepage-top">
       <div class="navbar-menu ms-navbar-menu">
         <div class="navbar-end">
-          <a href="https://discord.gg/K9nDY6x" class="navbar-item"
+          <a href="https://discord.gg/umnqyer" class="navbar-item"
             target="_blank">
             <i class="fab fa-discord"></i>
           </a>
@@ -55,7 +55,7 @@
           </h2>
         </div> <!-- /.container -->
         <div class="container ms-container--buttons">
-          <a href="https://discord.gg/K9nDY6x"
+          <a href="https://discord.gg/umnqyer"
             class="button is-primary is-medium is-emphasized is-orange">
             Join our Discord
             &nbsp;<i class="fas fa-chevron-right"></i>
@@ -183,7 +183,7 @@
           <div class="column is-1"></div>
           <div class="column is-5 column--footer-links">
             <div class="footer__link-container">
-              <a href="https://discord.gg/K9nDY6x" class="footer__link" target="_blank">
+              <a href="https://discord.gg/umnqyer" class="footer__link" target="_blank">
                 <i class="fab fa-discord"></i>
                 Join our Discord &rarr;
               </a>
