--- a/faq.html
+++ b/faq.html
@@ -178,7 +178,7 @@
           <div class="column is-1"></div>
           <div class="column is-5 column--footer-links">
             <div class="footer__link-container">
-              <a href="https://discord.gg/K9nDY6x" class="footer__link" target="_blank">
+              <a href="https://discord.gg/umnqyer" class="footer__link" target="_blank">
                 <i class="fab fa-discord"></i>
                 Join our Discord &rarr;
               </a>
