--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="static/css/main.9817803020.css">
+    <link rel="stylesheet" href="static/css/main.7d3fe4de8a.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -105,6 +105,11 @@
       <p><em class="is-highlight">Cancelling bids</em> happens on-chain and you only need to pay the Ethereum gas fee for each cancel.</p>
       <p><em class="is-highlight">Auction Sales.</em> When the token Creator accepts a Sponsor's bid and ends an MSPT auction, there is a 1.5% fee to each side. The Creator also pays the Ethereum "gas" plus a small 0x Protocol transaction fee when they accept a winning bid. The 0x Protocol transaction fee is roughly the same as the Ethereum gas fee and is used to reward token buyers (Sponsors) for using the protocol.</p>
       <p>If you plan to do alot of Sponsoring (buying of MSPT tokens), you may want to skip down to the section: "How do I earn money using Microsponsors with the 0x Protocol?".</p>
+
+      <h3 class="title is-5 is-size-6-mobile ms-title__q">&gt; What is "gas" and what does increasing the "gas price" do?</h3>
+      <p>"Gas" is the term for transaction fees on the Ethereum network that are paid in ETH. "Gas prices" fluctuate with network usage: the more usage the network gets, the higher the price of gas for your transaction. You can set a higher gas price for your transaction to get it processed faster during times of increased network activity.</p>
+      <p>Most of the time when you use Microsponsors with MetaMask, you can use the controls inside of MetaMask to adjust the gas price. The one exception is when an MSPT token Creator clicks "Accept Bid" to end an auction. There is a warning in the confirmation modal to remind you that you cannot adjust the gas price in MetaMask or the transaction will likely fail. Instead, you may click on the "Advanced" controls inside of the confirmation modal to adjust the gas price.</p>
+      <p>For all other transaction types, you may adjust the gas price directly in MetaMask.</p>
 
       <h3 class="title is-5 is-size-6-mobile ms-title__q">&gt; Why do I need to register?</h3>
       <p>If you intend to Create (aka "Mint") MSPT tokens and auction them, you need to register your account. If you only intend to buy and/or re-sell other people's tokens, you don't necessarily need to register, but it will probably help other users trust you more.</p>
@@ -244,6 +249,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: prelaunch-mainnet
-git sha: 5ef3226122d61634e9b58a6fd338c60c14427cad
+git branch: add-gas
+git sha: ef6c8ad69db6a30185d13006ea8e5f26b19a31c7
  -->
