--- a/privacy.html
+++ b/privacy.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="static/css/main.9817803020.css">
+    <link rel="stylesheet" href="static/css/main.7d3fe4de8a.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -27,14 +27,17 @@
       </div>
 
       <h1 class="title is-1 is-size-2-mobile" style="margin-bottom: 60px;">Privacy Policy</h1>
-      <p>Microsponsors is committed to your privacy. There are currently no advertising networks or tracking beacons on the site. We are not collecting any information about you other than what you choose to share publicly when you Register.</p>
+      <p>Microsponsors is committed to your privacy. There are currently no tracking beacons on the site. We are not collecting any information about you other than what you choose to share publicly when you Register.</p>
       <p>Over time, we may add anonymized tracking beacons (without cookies) to help us improve the service; this data will not be sold. If and when we add these beacons, they will be opt-out for end-users.</p>
       <p>Users of this site should understand that it is built on top of several layers of technology that keep public, immutable records of your activity.</p>
-      <p>Microsponsors' technology stack includes:<br /><br /><br />
-        - <a href="https://0x.org">0x.org</a> for auction bidding and exchange<br /><br />
-        - <a href="https://ethereum.org">Ethereum</a> as a base layer blockchain infrastructure<br /><br />
-        - <a href="https://3box.io">3Box.io</a> for user comments on individual tokens<br /><br />
+      <p>Microsponsors' technology stack includes:
+        <br /><br />
+        - <a href="https://0x.org">0x.org</a> for auction bidding and exchange<br />
+        - <a href="https://ethereum.org">Ethereum</a> as a base layer blockchain infrastructure<br />
+        - <a href="https://3box.io">3Box.io</a> for user comments on individual tokens<br />
         - <a href="https://3box.io">IPFS</a>, a distributed file system that serves as the underpinnings of 3Box.io
+        <br /><br />
+      Microsponsors strongly encourages you to understand the privacy implications of each of these technologies.
       </p>
       </div>
     </section>
@@ -84,7 +87,7 @@
               <a href="privacy.html" class="footer__link">Privacy</a>
             </div>
             <div class="footer__link-container">
-              <a href="terms.html" class="footer__link">Terms of Service</a>
+              <a href="tos.html" class="footer__link">Terms of Service</a>
             </div>
           </div>
         </div>
@@ -110,3 +113,7 @@
   </body>
   <!-- *** VERSION INFO *** -->
 </html>
+ <!-- VERSION
+git branch: add-gas
+git sha: ef6c8ad69db6a30185d13006ea8e5f26b19a31c7
+ -->
