--- a/terms.html
+++ b/terms.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="static/css/main.9817803020.css">
+    <link rel="stylesheet" href="static/css/main.7d3fe4de8a.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -130,7 +130,7 @@
               <a href="privacy.html" class="footer__link">Privacy</a>
             </div>
             <div class="footer__link-container">
-              <a href="terms.html" class="footer__link">Terms of Service</a>
+              <a href="tos.html" class="footer__link">Terms of Service</a>
             </div>
           </div>
         </div>
@@ -156,3 +156,7 @@
   </body>
   <!-- *** VERSION INFO *** -->
 </html>
+ <!-- VERSION
+git branch: add-gas
+git sha: ef6c8ad69db6a30185d13006ea8e5f26b19a31c7
+ -->
