--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="static/css/main.caf1d19fba.css">
+    <link rel="stylesheet" href="static/css/main.7d3fe4de8a.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -55,23 +55,25 @@
           </h2>
         </div> <!-- /.container -->
         <div class="container ms-container--buttons">
+          <!--
           <a href="https://discord.gg/umnqyer"
             class="button is-primary is-medium is-emphasized is-orange">
             Join our Discord
             &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
+         -->
           <a href="exchange.html?view=registry"
             class="button is-primary is-green is-medium is-emphasized">
-            Register Early
+            Register
             &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
-          <!--
+
           <a href="exchange.html"
-            class="button is-primary is-medium is-emphasized">
+            class="button is-primary is-medium is-inverse is-emphasized">
             Browse the exchange
             &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
-        -->
+
         </div>
         <div class="container ms-container--howthisworks">
           <p>How it works</p>
@@ -91,7 +93,8 @@
           <div class="column is-6 homepage-details__howthisworks__creators" >
             <h3 class="title is-4 is-size-6-mobile">For Creators:</h3>
             <ul>
-            <li class="is-6 is-size-7-mobile">Creators mint tokens that represent time slots as ERC-721 "Non-Fungible" tokens.</li>
+            <li class="is-6 is-size-7-mobile">Creators mint tokens that represent time slots as ERC-721 "Non-Fungible" tokens on
+            the Ethereum blockchain.</li>
             <li class="is-6 is-size-7-mobile">A time slot can be for: a podcast shout-out, a mention in a video or livestream or a game, freelancing, events, services, charity... Be creative!</li>
             <li class="is-6 is-size-7-mobile">Each time slot automatically goes to auction on Microsponsors, the Creator picks the winning bid.</li>
             </ul>
@@ -103,6 +106,28 @@
             <li class="is-6 is-size-7-mobile">Each auction has a Comments section that the Sponsor can use to ask questions and leave feedback at the end.</li>
             <li class="is-6 is-size-7-mobile">Auctions end at least 24 hours before the time slot begins.</li>
           </ul>
+          </div>
+        </div>
+
+        <h3 class="title is-4 is-size-6-mobile ms-categories-title">
+          categories:
+        </h3>
+        <div class="columns homepage-details__categories">
+          <div class="column is-6" >
+            <a href="exchange.html?view=auctions&sort=category-podcast" class="is-5 is-size-6-mobile">Podcasts</a>
+            <a href="exchange.html?view=auctions&sort=category-event">Events</a>
+            <a href="exchange.html?view=auctions&sort=category-websites">Websites</a>
+            <a href="exchange.html?view=auctions&sort=category-game">Games</a>
+            <a href="exchange.html?view=auctions&sort=category-video">Videos/ Livestreams</a>
+            <a href="exchange.html?view=auctions&sort=category-social%20media">Social Media</a>
+          </div>
+          <div class="column is-6" >
+            <a href="exchange.html?view=auctions&sort=category-freelancing">Freelancing</a>
+            <a href="exchange.html?view=auctions&sort=category-software%20development">Software Development</a>
+            <a href="exchange.html?view=auctions&sort=category-art">Art</a>
+            <a href="exchange.html?view=auctions&sort=category-newsletter">Newsletters</a>
+            <a href="exchange.html?view=auctions&sort=category-publications">Publications</a>
+            <a href="exchange.html?view=auctions&sort=category-charity">Charity/ Fundraisers</a>
           </div>
         </div>
 
@@ -119,7 +144,8 @@
           <div class="detail-icon detail-icon__fees"></div>
           <h3 class="title is-4 is-size-6-mobile">Lower Fees</h3>
           <ul>
-            <li class="is-5 is-size-7-mobile">Using the Ethereum blockchain for payments means lower fees.</li>
+            <li class="is-5 is-size-7-mobile">Using the Ethereum blockchain for payments means lower fees. Especially for cross-border
+            payments.</li>
             <li class="is-5 is-size-7-mobile">Creators: no fee for registration.</li>
             <li class="is-5 is-size-7-mobile">Sponsors: no fee for bidding.</li>
             <li class="is-5 is-size-7-mobile">When a bid accepted by a seller and the auction is over, Microsponsors charges a fee of 1.5% to each side.</li>
@@ -304,6 +330,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: master
-git sha: 92d201d50bf1187fa588ecb4ac237e58b1bff94d
+git branch: add-gas
+git sha: ef6c8ad69db6a30185d13006ea8e5f26b19a31c7
  -->
