homepage: copy grammar fix

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             payments.</li>
             <li class="is-5 is-size-7-mobile">Creators: no fee for registration.</li>
             <li class="is-5 is-size-7-mobile">Sponsors: no fee for bidding.</li>
-            <li class="is-5 is-size-7-mobile">When a bid accepted by a seller and the auction is over, Microsponsors charges a fee of 1.5% to each side.</li>
+            <li class="is-5 is-size-7-mobile">When a bid is accepted by a seller and the auction is over, Microsponsors charges a fee of 1.5% to each side.</li>
           </ul>
         </div>
 
