--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="static/css/main.7d3fe4de8a.css">
+    <link rel="stylesheet" href="static/css/main.5175330acb.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -249,6 +249,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: add-gas
-git sha: ef6c8ad69db6a30185d13006ea8e5f26b19a31c7
+git branch: master
+git sha: 88a9c1079d014856546b344a96d64d83399426f2
  -->
