--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="static/css/main.7d3fe4de8a.css">
+    <link rel="stylesheet" href="static/css/main.5175330acb.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -67,11 +67,9 @@
             Register
             &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
-
           <a href="exchange.html"
             class="button is-primary is-medium is-inverse is-emphasized">
-            Browse the exchange
-            &nbsp;<i class="fas fa-chevron-right"></i>
+            Sell, Buy and Browse &rarr;
           </a>
 
         </div>
@@ -93,10 +91,10 @@
           <div class="column is-6 homepage-details__howthisworks__creators" >
             <h3 class="title is-4 is-size-6-mobile">For Creators:</h3>
             <ul>
-            <li class="is-6 is-size-7-mobile">Creators mint tokens that represent time slots as ERC-721 "Non-Fungible" tokens on
-            the Ethereum blockchain.</li>
-            <li class="is-6 is-size-7-mobile">A time slot can be for: a podcast shout-out, a mention in a video or livestream or a game, freelancing, events, services, charity... Be creative!</li>
+            <li class="is-6 is-size-7-mobile">Creators quickly &amp; easily create tokens that represent time slots via the Ethereum blockchain.</li>
+            <li class="is-6 is-size-7-mobile">A time slot can be for: a podcast shout-out, a mention in a video or livestream or game, freelancing, events, services, charity... Be creative!</li>
             <li class="is-6 is-size-7-mobile">Each time slot automatically goes to auction on Microsponsors, the Creator picks the winning bid.</li>
+            <li class="is-6 is-size-7-mobile"><a href="exchange.html">Get Started &rarr;</a></li>
             </ul>
           </div>
           <div class="column is-6 homepage-details__howthisworks__sponsors">
@@ -105,21 +103,22 @@
             <li class="is-6 is-size-7-mobile">Sponsors browse the market and bid on the Creators' time slots they wish to purchase.</li>
             <li class="is-6 is-size-7-mobile">Each auction has a Comments section that the Sponsor can use to ask questions and leave feedback at the end.</li>
             <li class="is-6 is-size-7-mobile">Auctions end at least 24 hours before the time slot begins.</li>
+            <li class="is-6 is-size-7-mobile"><a href="exchange.html">Get Started &rarr;</a></li>
           </ul>
           </div>
         </div>
 
         <h3 class="title is-4 is-size-6-mobile ms-categories-title">
-          categories:
+          browse categories:
         </h3>
         <div class="columns homepage-details__categories">
           <div class="column is-6" >
             <a href="exchange.html?view=auctions&sort=category-podcast" class="is-5 is-size-6-mobile">Podcasts</a>
-            <a href="exchange.html?view=auctions&sort=category-event">Events</a>
+            <a href="exchange.html?view=auctions&sort=category-social%20media">Social Media (Influencers)</a>
+            <a href="exchange.html?view=auctions&sort=category-video">Videos/ Livestreams</a>
             <a href="exchange.html?view=auctions&sort=category-websites">Websites</a>
             <a href="exchange.html?view=auctions&sort=category-game">Games</a>
-            <a href="exchange.html?view=auctions&sort=category-video">Videos/ Livestreams</a>
-            <a href="exchange.html?view=auctions&sort=category-social%20media">Social Media</a>
+            <a href="exchange.html?view=auctions&sort=category-event">Events</a>
           </div>
           <div class="column is-6" >
             <a href="exchange.html?view=auctions&sort=category-freelancing">Freelancing</a>
@@ -137,6 +136,7 @@
           <ul>
             <li class="is-5 is-size-7-mobile">When Creators choose a winning bid, tokens are traded directly wallet-to-wallet using the <a href="https://0x.org" target="_blank">0x Protocol</a> on the public Ethereum blockchain.</li>
             <li class="is-5 is-size-7-mobile">In other words: No middlemen! Microsponsors is basically a bulletin board with built-in auctions.</li>
+            <li class="is-5 is-size-7-mobile">Bidding is completely decentralized. We cannot play favorites or interfere in bidding in any way.</li>
           </ul>
         </div>
 
@@ -330,6 +330,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: add-gas
-git sha: ef6c8ad69db6a30185d13006ea8e5f26b19a31c7
+git branch: master
+git sha: 88a9c1079d014856546b344a96d64d83399426f2
  -->
