bugfix: footer links to terms.html

--- a/privacy.html
+++ b/privacy.html
@@ -87,7 +87,7 @@
               <a href="privacy.html" class="footer__link">Privacy</a>
             </div>
             <div class="footer__link-container">
-              <a href="tos.html" class="footer__link">Terms of Service</a>
+              <a href="terms.html" class="footer__link">Terms of Service</a>
             </div>
           </div>
         </div>
